setting up and reconfiguring pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,269 @@
 @import 'tailwindcss';
+
+@theme {
+  /* COLOR PALETTE */
+  --color-accent-50: oklch(97.89% 0.001 106.42);
+  --color-accent-100: oklch(95.76% 0.003 106.45);
+  --color-accent-200: oklch(91.37% 0.007 115.71);
+  --color-accent-300: oklch(86.18% 0.01 106.6);
+  --color-accent-400: oklch(80.18% 0.014 106.71);
+  --color-accent-500: oklch(72.68% 0.02 110.2);
+  --color-accent-600: oklch(64.73% 0.026 109.7);
+  --color-accent-700: oklch(58.73% 0.025 109.9);
+  --color-accent-800: oklch(52.24% 0.023 110.28);
+  --color-accent-900: oklch(41.58% 0.018 111.39);
+  --color-accent-950: oklch(31.07% 0.012 107.09);
+
+  --color-neutral-50: oklch(96.84% 0.003 48.72);
+  --color-neutral-100: oklch(93.66% 0.005 48.68);
+  --color-neutral-200: oklch(86.06% 0.011 45.7);
+  --color-neutral-300: oklch(78.83% 0.018 50.38);
+  --color-neutral-400: oklch(70.59% 0.025 48.35);
+  --color-neutral-500: oklch(62.14% 0.033 47.09);
+  --color-neutral-600: oklch(54.48% 0.032 49.27);
+  --color-neutral-700: oklch(45.55% 0.026 51.11);
+  --color-neutral-800: oklch(35.93% 0.02 48.15);
+  --color-neutral-900: oklch(26.84% 0.013 41.64);
+  --color-neutral-950: oklch(21.42% 0.009 43.07);
+
+  /* TEXT */
+  --font-main: var(--font-main);
+  --font-accent: var(--font-accent);
+  --font-logo: var(--font-logo);
+
+  /* @link https://utopia.fyi/type/calculator?c=320,14,1.333,1120,16,1.414,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  --text-xs: clamp(0.6564rem, 0.6361rem + 0.1016vw, 0.7072rem);
+  --text-sm: clamp(0.875rem, 0.825rem + 0.25vw, 1rem);
+  --text-base: clamp(1.1664rem, 1.0673rem + 0.4953vw, 1.414rem);
+  --text-lg: clamp(1.5548rem, 1.3769rem + 0.8892vw, 1.9994rem);
+  --text-xl: clamp(2.0725rem, 1.7707rem + 1.5093vw, 2.8271rem);
+  --text-2xl: clamp(2.7627rem, 2.2687rem + 2.4698vw, 3.9976rem);
+  --text-3xl: clamp(3.6826rem, 2.8947rem + 3.9399vw, 5.6526rem);
+  --text-4xl: clamp(4.909rem, 3.6754rem + 6.1676vw, 7.9928rem);
+
+  /* SPACING */
+  /* @link https://utopia.fyi/space/calculator?c=320,18,1.333,1240,22,1.414,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  --spacing-3xs: clamp(0.25rem, 0.25rem + 0vw, 0.25rem);
+  --spacing-2xs: clamp(0.5rem, 0.5rem + 0vw, 0.5rem);
+  --spacing-xs: clamp(0.75rem, 0.75rem + 0vw, 0.75rem);
+  --spacing-sm: clamp(1rem, 1rem + 0vw, 1rem);
+  --spacing-md: clamp(1.5rem, 1.5rem + 0vw, 1.5rem);
+  --spacing-lg: clamp(2rem, 2rem + 0vw, 2rem);
+  --spacing-xl: clamp(3rem, 3rem + 0vw, 3rem);
+  --spacing-2xl: clamp(4rem, 4rem + 0vw, 4rem);
+  --spacing-3xl: clamp(6rem, 6rem + 0vw, 6rem);
+  --spacing-4xl: clamp(7rem, 7rem + 0vw, 7rem);
+
+  /* One-up pairs */
+  --spacing-3xs-2xs: clamp(0.25rem, 0.15rem + 0.5vw, 0.5rem);
+  --spacing-2xs-xs: clamp(0.5rem, 0.4rem + 0.5vw, 0.75rem);
+  --spacing-xs-s: clamp(0.75rem, 0.65rem + 0.5vw, 1rem);
+  --spacing-sm-md: clamp(1rem, 0.8rem + 1vw, 1.5rem);
+  --spacing-md-lg: clamp(1.5rem, 1.3rem + 1vw, 2rem);
+  --spacing-lg-xl: clamp(2rem, 1.6rem + 2vw, 3rem);
+  --spacing-xl-2xl: clamp(3rem, 2.6rem + 2vw, 4rem);
+  --spacing-2xl-3xl: clamp(4rem, 3.2rem + 4vw, 6rem);
+  --spacing-3xl-4xl: clamp(6rem, 5.6rem + 2vw, 7rem);
+}
+
+@layer base {
+  body {
+    --margin: var(--spacing-sm);
+    display: grid;
+    grid-template-columns: minmax(var(--margin), 1fr) minmax(0, 1120px) minmax(var(--margin), 1fr);
+    grid-template-rows: auto 1fr auto;
+    place-items: start;
+    min-height: 100svh;
+
+    font-family: var(--font-main);
+    font-size: var(--text-base);
+    background-color: var(--color-neutral-50);
+    color: var(--color-neutral-900);
+
+    > header,
+    > main,
+    > footer {
+      grid-column: 2;
+    }
+  }
+}
+
+@utility full-bleed {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: subgrid;
+  place-items: start;
+
+  > *:not(.full-bleed) {
+    grid-column: 2;
+  }
+}
+
+@utility flow-space {
+  > * + * {
+    margin-block-start: var(--flow-space, 1em);
+  }
+}
+
+/* * {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 18px;
+  line-height: 32px;
+
+  background: rgb(0, 0, 0);
+  -webkit-font-smoothing: antialiased;
+}
+
+html,
+body,
+#app {
+  height: 100%;
+}
+
+body {
+  font-family: system-ui;
+  font-size: 18px;
+  line-height: 32px;
+
+  margin: 0;
+  color: rgb(1000, 1000, 1000);
+
+  @media (max-width: 1024px) {
+    font-size: 15px;
+    line-height: 24px;
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+h1 {
+  margin: 40px 0;
+  font-size: 64px;
+  line-height: 70px;
+  font-weight: bold;
+
+  @media (max-width: 1024px) {
+    margin: 24px 0;
+    font-size: 42px;
+    line-height: 42px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 38px;
+    line-height: 38px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+p {
+  margin: 24px 0;
+
+  @media (max-width: 1024px) {
+    margin: calc(var(--base) * 0.75) 0;
+  }
+}
+
+a {
+  color: currentColor;
+
+  &:focus {
+    opacity: 0.8;
+    outline: none;
+  }
+
+  &:active {
+    opacity: 0.7;
+    outline: none;
+  }
+}
+
+svg {
+  vertical-align: middle;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  padding: 45px;
+  max-width: 1024px;
+  margin: 0 auto;
+  overflow: hidden;
+
+  @media (max-width: 400px) {
+    padding: 24px;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+
+    h1 {
+      text-align: center;
+    }
+  }
+
+  .links {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    a {
+      text-decoration: none;
+      padding: 0.25rem 0.5rem;
+      border-radius: 4px;
+    }
+
+    .admin {
+      color: rgb(0, 0, 0);
+      background: rgb(1000, 1000, 1000);
+      border: 1px solid rgb(0, 0, 0);
+    }
+
+    .docs {
+      color: rgb(1000, 1000, 1000);
+      background: rgb(0, 0, 0);
+      border: 1px solid rgb(1000, 1000, 1000);
+    }
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    .codeLink {
+      text-decoration: none;
+      padding: 0 0.5rem;
+      background: rgb(60, 60, 60);
+      border-radius: 4px;
+    }
+  }
+} */
