--- a/src/app/(frontend)/global.css
+++ b/src/app/(frontend)/global.css
@@ -154,7 +154,7 @@
     font-weight: var(--font-weight-normal);
     font-size: var(--text-base);
     font-family: var(--font-copy);
-    background-color: var(--color-primary-50);
+    /* background-color: var(--color-primary-50); */
 
     > header,
     > main,
@@ -174,6 +174,27 @@
 @layer components {
   .img-placeholder {
     @apply max-h-200 min-h-40 max-w-200 min-w-60 bg-accent-800;
+  }
+}
+
+@utility background-primary {
+  background-color: var(--color-primary-50);
+}
+
+@utility rich-text {
+  > * + * {
+    margin-block-start: var(--flow-space, 1em);
+  }
+
+  h1 {
+    font-weight: var(--);
+    font-size: var(--text-2xl);
+  }
+
+  p {
+    font-weight: var(--font-weight-normal);
+    font-size: var(--text-sm);
+    font-family: var(--font-copy);
   }
 }
 
