--- a/src/app/(frontend)/global.css
+++ b/src/app/(frontend)/global.css
@@ -221,7 +221,7 @@
   }
 } */
 
-@utility span-1/2 {
+/* @utility span-1/2 {
   @apply col-span-6 [.full-bleed>&]:col-span-7;
 }
 
@@ -245,7 +245,7 @@
   > * + * {
     margin-block-start: var(--flow-space, 1em);
   }
-}
+} */
 
 @utility hide {
   display: none;
