can add rich text and image

--- a/src/app/(frontend)/global.css
+++ b/src/app/(frontend)/global.css
@@ -184,6 +184,12 @@
         }
       }
     }
+
+    section[data-fullbleed='true'] {
+      display: grid;
+      grid-column: full-bleed;
+      grid-template-columns: subgrid;
+    }
   }
 }
 
